--- a/kategori/umum/index.html
+++ b/kategori/umum/index.html
@@ -3,7 +3,7 @@
 				  gtag('js', new Date());
 				  gtag('config', 'G-57GWEG11N8' );</script><meta name="theme-color" content="#17181E" media="(prefers-color-scheme: dark)"><meta name="theme-color" content="#78D08F" media="(prefers-color-scheme: light)"><meta name="msapplication-navbutton-color" content="#78D08F"><meta name="apple-mobile-web-app-status-bar-style" content="#78D08F"><link rel="alternate" type="application/atom+xml" href="https://sdnsungaidalam1.netlify.app/feed.xml" title="SDN Sungai Dalam 1 - RSS"><link rel="alternate" type="application/json" href="https://sdnsungaidalam1.netlify.app/feed.json" title="SDN Sungai Dalam 1 - JSON"><meta property="og:title" content="Umum"><meta property="og:image" content="https://sdnsungaidalam1.netlify.app/media/website/sdn-sungai-dalam-callback.png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="600"><meta property="og:site_name" content="SDN Sungai Dalam 1"><meta property="og:description" content=""><meta property="og:url" content="https://sdnsungaidalam1.netlify.app/kategori/umum/"><meta property="og:type" content="website"><link rel="shortcut icon" href="https://sdnsungaidalam1.netlify.app/media/website/favicon.ico" type="image/x-icon"><link rel="stylesheet" href="https://sdnsungaidalam1.netlify.app/assets/css/style.css?v=8b651e5d837a721f5efd3a9fb1397bad"><script type="application/ld+json">{"@context":"http://schema.org","@type":"Organization","name":"SDN Sungai Dalam 1","logo":"https://sdnsungaidalam1.netlify.app/media/website/navbar-2.png","url":"https://sdnsungaidalam1.netlify.app/"}</script><noscript><style>img[loading] {
                     opacity: 1;
-                }</style></noscript><meta name="google-site-verification" content="l64Ksal0AggfN-SCMRSeIzX0cGoUfgPr_Q_wE-46yMM"><meta name="algolia-site-verification" content="6FBE41639C6ADBC3"><link rel="stylesheet" href="https://sdnsungaidalam1.netlify.app/media/plugins/coreLightboxGallery/photoswipe.min.css"><style>:root {
+                }</style></noscript><meta name="google-site-verification" content="l64Ksal0AggfN-SCMRSeIzX0cGoUfgPr_Q_wE-46yMM"><meta name="algolia-site-verification" content="6FBE41639C6ADBC3"><script src="https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.min.js"></script><link rel="stylesheet" href="https://sdnsungaidalam1.netlify.app/media/plugins/coreLightboxGallery/photoswipe.min.css"><style>:root {
 		       	 --pswp-bg: #000000;
 					 --pswp-placeholder-bg: rgba(38, 40, 44, 1);
 					 --pswp-ui-bg: rgba(38, 40, 44, .5);
@@ -123,4 +123,3 @@ zoomSVG: `<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-line
 						timeout: 2000
 					});
 				});</script></body></html>
-
